--- a/style.css
+++ b/style.css
@@ -52,6 +52,15 @@ button {
     cursor: pointer;
     width: 5rem;
     height: 2rem;
-    border-radius: 1rem;
+    border-radius: .5rem;
     margin: 1rem 3rem;
+}
+
+table {
+    text-align: center;
+    margin: auto;
+    
+}
+hr{
+    border: solid 1px;
 }
